[tool.poetry]
name = "marsweathercli"
version = "0.1.0"
description = "Mars Weather CLI Application"
authors = ["Raju Ghorai <amirajubolchi001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
